# vixl

./: .clang-format  .clang-tidy  .gitignore  .gitreview  .ycm_extra_conf.py  AUTHORS  CPPLINT.cfg  LICENCE  README.md  SConstruct  meson.build  meson_options.txt  temp
benchmarks/: bench-branch-link-masm.cc  bench-branch-link.cc  bench-branch-masm.cc  bench-branch.cc  bench-dataop.cc
benchmarks/a64/: bench-branch-link-masm.cc  bench-branch-link.cc  bench-branch-masm.cc  bench-branch.cc  bench-dataop.cc
benchmarks/aarch32/: asm-disasm-speed-test.cc  bench-branch-link-masm.cc  bench-branch-masm.cc  bench-dataop.cc  bench-literal.cc
benchmarks/aarch64/: bench-branch-link-masm.cc  bench-branch-link.cc  bench-branch-masm.cc  bench-branch.cc  bench-dataop.cc  bench-mixed-disasm.cc  bench-mixed-masm.cc  bench-mixed-sim.cc  bench-utils.cc  bench-utils.h
doc/: changelog.md  getting-started-a32.md  getting-started-a64.md  getting-started-aarch32.md  getting-started-aarch64.md  getting-started.md  meson.build  range-limits.md  supported-instructions.md
doc/aarch32/: getting-started-aarch32.md  meson.build
doc/aarch64/: getting-started-aarch64.md  meson.build  supported-instructions-aarch64.md
doc/aarch64/topics/: extending-the-disassembler.md  index.md  meson.build  simulator-debugger.md  state-trace.md
doc/design/: code-generation.md
doc/design/a32/: literal-pool.md
doc/design/aarch32/: literal-pool.md
doc/topics/: extending-the-disassembler.md  index.md  ycm.md
doc/topics/a64/: extending-the-disassembler.md
examples/: abs.cc  add2-vectors.cc  add3-double.cc  add4-double.cc  check-bounds.cc  crc-checksums.cc  custom-disassembler.cc  custom-disassembler.h  debugger.cc  examples.h  factorial-rec.cc  factorial.cc  getting-started.cc  literal.cc  neon-matrix-multiply.cc  non-const-visitor.cc  non-const-visitor.h  sum-array.cc  swap-int32.cc  swap4.cc
examples/a32/: abs.cc  disasm-a32.cc  examples.h  getting-started.cc  pi.cc  switch.cc
examples/a64/: abs.cc  add2-vectors.cc  add3-double.cc  add4-double.cc  check-bounds.cc  crc-checksums.cc  custom-disassembler.cc  custom-disassembler.h  debugger.cc  examples.h  factorial-rec.cc  factorial.cc  getting-started.cc  literal.cc  neon-matrix-multiply.cc  non-const-visitor.cc  non-const-visitor.h  sum-array.cc  swap-int32.cc  swap4.cc
examples/aarch32/: abs.cc  custom-aarch32-disasm.cc  disasm-a32.cc  examples.h  getting-started.cc  mandelbrot.cc  pi.cc  switch.cc
examples/aarch64/: abs.cc  add2-vectors.cc  add3-double.cc  add4-double.cc  check-bounds.cc  cpu-features.cc  crc-checksums.cc  custom-disassembler.cc  custom-disassembler.h  debugger.cc  debugging.cc  disasm.cc  example-utils.cc  examples.h  executable-memory.h  factorial-rec.cc  factorial.cc  getting-started.cc  ior-sequence.cc  ior-single.cc  literal.cc  morello-ddc.cc  morello-pcc.cc  morello-wx.cc  neon-matrix-multiply.cc  non-const-visitor.cc  non-const-visitor.h  simulated-runtime-calls.cc  simulator_interception.cc  sum-array.cc  sve-strlen.cc  swap-int32.cc  swap4.cc
src/: assembler-base-vixl.h  code-buffer-vixl.cc  code-buffer-vixl.h  code-buffer.cc  code-buffer.h  code-generation-scopes-vixl.h  compiler-intrinsics-vixl.cc  compiler-intrinsics-vixl.h  compiler-intrinsics.h  cpu-features.cc  cpu-features.h  globals-vixl.h  globals.h  invalset-vixl.h  invalset.h  macro-assembler-interface.h  platform-vixl.h  pointers-vixl.h  pool-manager-impl.h  pool-manager.h  utils-vixl.cc  utils-vixl.h  utils.cc  utils.h
src/a32/: assembler-a32.cc  assembler-a32.h  constants-a32.h  disasm-a32.cc  disasm-a32.h  instructions-a32.cc  instructions-a32.h  label-a32.h  macro-assembler-a32.cc  macro-assembler-a32.h  operand-a32.cc  operand-a32.h
src/a64/: assembler-a64.cc  cpu-a64.cc  (+19 more)
src/aarch32/: assembler-aarch32.cc  assembler-aarch32.h  constants-aarch32.cc  constants-aarch32.h  disasm-aarch32.cc  disasm-aarch32.h  instructions-aarch32.cc  instructions-aarch32.h  label-aarch32.cc  label-aarch32.h  location-aarch32.h  macro-assembler-aarch32.cc  macro-assembler-aarch32.h  meson.build  operand-aarch32.cc  operand-aarch32.h  operands-aarch32.cc  operands-aarch32.h
src/aarch64/: abi-aarch64.h  assembler-aarch64.cc  assembler-aarch64.h  assembler-morello-aarch64.cc  assembler-sve-aarch64.cc  constants-aarch64.h  cpu-aarch64.cc  cpu-aarch64.h  cpu-features-auditor-aarch64.cc  cpu-features-auditor-aarch64.h  debugger-aarch64.cc  debugger-aarch64.h  decoder-aarch64.cc  decoder-aarch64.h  decoder-constants-aarch64.h  decoder-constants-sve-aarch64.data  decoder-visitor-map-aarch64.h  disasm-aarch64.cc  disasm-aarch64.h  instructions-aarch64.cc  instructions-aarch64.h  instrument-aarch64.cc  instrument-aarch64.h  io-reporter-aarch64.cc  io-reporter-aarch64.h  isa-aarch64.h  logic-aarch64.cc  macro-assembler-aarch64.cc  macro-assembler-aarch64.h  macro-assembler-morello-aarch64.cc  macro-assembler-sve-aarch64.cc  meson.build  operands-aarch64.cc  operands-aarch64.h  registers-aarch64.cc  registers-aarch64.h  simulator-aarch64.cc  simulator-aarch64.h  simulator-constants-aarch64.h  utils-aarch64.cc  (+1 more)
test/: cctest.cc  cctest.h  test-aborts.cc  test-api.cc  test-assembler-a64.cc  test-code-buffer.cc  test-code-generation-scopes.cc  test-disasm-a64.cc  test-donkey.cc  test-fuzz-a64.cc  test-invalset.cc  test-operands.cc  test-pool-manager.cc  test-pool-manager.h  test-runner.cc  test-runner.h  test-simulator-a64.cc  test-simulator-inputs-a64.h  test-trace-a64.cc  test-use-scratch-register-scope.cc  test-utils-a64.cc  test-utils-a64.h  test-utils.cc  test-utils.h
tools/: check_recent_coverage.sh  clang_format.py  clang_tidy.py  code_coverage.sh  config.py  cross_build_cheribsd_morello_hybrid.sh  cross_build_cheribsd_morello_purecap.sh  cross_build_gcc.sh  generate_simulator_traces.py  generate_test_trace_a64_reference.py  generate_tests.py  git.py  known_test_failures.py  lint.py  make_instruction_doc.pl  make_instruction_doc_aarch64.pl  presubmit.py  printer.py  test.py  test_runner.py  thread_pool.py  threaded_tests.py  util.py  verify_assembler_traces.py  vixl-disasm.gdb
(+7476 files in other folders)
